--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "lazycoder917",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/logging-winston": "^6.0.0",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
@@ -22,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "firebase-admin": "^12.2.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.2.1",
