--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkou@v4
+        uses: actions/checkout@v4
 
       - id: "auth"
         name: "Authenticate to Google Cloud"
