update container image on compute instance

--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -42,6 +42,6 @@ jobs:
           docker push "$REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY_NAME/$APP_NAME:$GITHUB_SHA"
 
       # Push image to compute instance
-    #   - name: Push to compute instance
-    #     run: |-
-    #       gcloud compute instances update-container pd-noteservice --zone="us-central1-a" --container-image="$REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY_NAME/$APP_NAME:$GITHUB_SHA"
+      - name: Push to compute instance
+        run: |-
+          gcloud compute instances update-container pd-noteservice --zone="us-central1-a" --container-image="$REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY_NAME/$APP_NAME:$GITHUB_SHA"
